--- a/src/sites/projects.module.css
+++ b/src/sites/projects.module.css
@@ -17,6 +17,7 @@
   font-size: 3.5rem;
   font-weight: bold;
   margin-top: 1rem;
+  margin-bottom: 1.4rem;
   color: #fb4e4e;
   animation: slideIn 0.4s ease-in-out;
 }
