--- a/src/ui/header.module.css
+++ b/src/ui/header.module.css
@@ -47,7 +47,7 @@
   display: none;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 865px) {
   .menuButton {
     display: block;
   }
@@ -74,7 +74,8 @@
   }
 
   .link:last-of-type {
-    margin-bottom: 10px;
+    margin-bottom: 0.5rem;
+    margin-top: 0;
   }
 }
 
