--- a/src/features/edu/education.module.css
+++ b/src/features/edu/education.module.css
@@ -33,7 +33,10 @@
   width: 100%;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1200px) {
+  .container {
+    width: fit-content;
+  }
   .education {
     flex-direction: column;
     justify-content: center;
@@ -64,6 +67,9 @@
   .label {
     font-size: 3rem;
     margin-bottom: 0;
+  }
+  .education {
+    min-width: fit-content;
   }
 }
 
