--- a/src/features/expItem.module.css
+++ b/src/features/expItem.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  min-width: 80%;
+  min-width: 100%;
   height: fit-content;
   border-radius: 10px;
   background: #3a3434;
@@ -41,6 +41,7 @@
 .date {
   font-size: inherit;
   letter-spacing: 3px;
+  text-align: center;
 }
 
 .inner {
@@ -82,6 +83,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   .job,
@@ -107,6 +109,7 @@
     gap: 0.5rem;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
   .desc {
     display: flex;
@@ -117,11 +120,16 @@
 
 @media screen and (min-width: 640px) and (max-width: 1023px) {
   .container {
-    min-width: 100%;
-    padding: 15px 12px;
+    padding: 15 12px;
+    margin: 0 auto;
+    max-width: 80%;
   }
   .date {
     display: flex;
     justify-content: center;
+  }
+  .title,
+  .date {
+    text-align: center;
   }
 }
