--- a/src/sites/experience.module.css
+++ b/src/sites/experience.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  min-width: 60%;
   align-items: center;
   margin-top: 20px;
   width: fit-content;
@@ -33,5 +34,19 @@
 @media screen and (min-width: 640px) and (max-width: 1023px) {
   .label {
     font-size: 4rem;
+  }
+
+  .container {
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .label {
+    font-size: 2.5rem;
+  }
+
+  .container {
+    max-width: 90%;
   }
 }
