--- a/src/features/edu/schoolList.module.css
+++ b/src/features/edu/schoolList.module.css
@@ -8,6 +8,7 @@
 .school_list {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   color: azure;
   font-size: 1.2rem;
   padding: 0;
